--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "isexe": "^3.1.1",
     "nodemon": "^3.0.3",
     "react": "^18.2.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.3.0",
